syntax = "proto3";

package vertis.validation.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_multiple_files = true;

import "options.proto";
import "validation.proto";
import "test_options.proto";

message WithSpecialField {
    string classified = 1 [ (is_classified) = true];
    string source = 2 [ (is_source) = true];

    string id = 3;
}

message MissingOneSpecial {
    string classified = 1 [ (is_classified) = true];
    string source = 2 [ (is_source) = false];
}

message MissingAll {
    string id = 1;
}
