syntax = "proto3";

package vertis.validation.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_outer_classname = "TestOptions";
option java_multiple_files = true;

import "google/protobuf/descriptor.proto";

//Offer validation fields
extend google.protobuf.FieldOptions {

  bool is_classified = 63003;
  bool is_source = 63004;
}
